[gd_scene format=3 uid="uid://n73cmic5pigu"]

[ext_resource type="Script" uid="uid://3k2cle7mjkg" path="res://Misc/Game Manager/game_manager.gd" id="1_j06dl"]
[ext_resource type="Script" uid="uid://p42uyc4iex8u" path="res://Misc/Game Manager/global_ui_container.gd" id="2_smvuq"]
[ext_resource type="AudioStream" uid="uid://7bc2yqr6mup1" path="res://Misc/BaseGameAssets/PerfectSF.mp3" id="3_dg13d"]
[ext_resource type="AudioStream" uid="uid://1fvdk51uy21p" path="res://Misc/BaseGameAssets/ARGH.mp3" id="4_6krua"]

[node name="GameManager" type="Node" unique_id=1844071725]
script = ExtResource("1_j06dl")

[node name="StartPoint" type="Marker2D" parent="." unique_id=1350634962]
position = Vector2(1210, 0)

[node name="PlayPoint" type="Marker2D" parent="." unique_id=770427877]

[node name="EndPoint" type="Marker2D" parent="." unique_id=85595564]
position = Vector2(-1253, 0)

[node name="Control" type="Control" parent="." unique_id=1161526758]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_smvuq")

[node name="LvlIntensity" type="Label" parent="Control" unique_id=628835348]
layout_mode = 0
offset_left = 195.0
offset_top = 13.0
offset_right = 376.0
offset_bottom = 36.0
scale = Vector2(1.6310849, 1.6310849)
text = "Current Level Intensity:"

[node name="Lives" type="Label" parent="Control" unique_id=618271044]
layout_mode = 0
offset_left = 631.0
offset_top = 13.0
offset_right = 812.0
offset_bottom = 36.0
scale = Vector2(1.6310849, 1.6310849)
text = "Lives:"

[node name="Score" type="Label" parent="Control" unique_id=256630249]
layout_mode = 0
offset_left = 808.0
offset_top = 12.999999
offset_right = 989.0
offset_bottom = 36.0
scale = Vector2(1.6310849, 1.6310849)
text = "Score
"

[node name="ColorRect" type="ColorRect" parent="Control" unique_id=878532211]
layout_mode = 0
offset_left = -4.0
offset_top = 1.0
offset_right = 1152.0
offset_bottom = 18.0
color = Color(1, 1, 1, 0)

[node name="WinSound" type="AudioStreamPlayer" parent="." unique_id=1494108728]
stream = ExtResource("3_dg13d")

[node name="LoseSound" type="AudioStreamPlayer" parent="." unique_id=1903735166]
stream = ExtResource("4_6krua")
